--- a/ShoppingCartFinalAPI/orderd.html
+++ b/ShoppingCartFinalAPI/orderd.html
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col-md-8">
                 <h3>Orders</h3>
-                <div id="producturl" class="producturl">
+                <div id="order" class="order">
 
                 </div>
 
@@ -30,8 +30,7 @@
   
             </div>
         </div>
-     
-    </div>
+
 
     <script src="scripts/libs/jquery.min.js"></script>
     <script src="scripts/libs/jquery.ba-tinypubsub.js"></script>
@@ -45,11 +44,8 @@
 
     <script type="text/jsx">
         /** @jsx React.DOM */
-
-
-
         React.renderComponent(
-        <Products />, document.getElementById('producturl'));
+        <OrderPagejs />, document.getElementById('order'));
 
     </script>
 </body>
